--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@400;900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html, body {
+    scroll-behavior: smooth;
+    background-color: #1B1F24;
+}
+
+p {
+    color: white;
+}
+
